--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root=DEBUG
+logging.level.root=INFO
 
 spring.datasource.url=jdbc:h2:mem:kanban
 spring.datasource.driverClassName=org.h2.Driver
@@ -6,10 +6,3 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-
-jwt.clientId=clientId
-jwt.client-secret=clientSecret
-jwt.signing-key=signingKey
-jwt.authorizedGrantTypes=client_credentials,refresh_token
-jwt.accessTokenValidititySeconds=43200
-jwt.refreshTokenValiditySeconds=2592000
